# llm-semantic-compilers

./: .gitignore  .mcp.json  .pre-commit-config.yaml  .pre-commit-hooks.yaml  AGENTS.md  CLAUDE.md  Code-IR.md  README.md  RELEASING.md  action.yml  pyproject.toml
.github/workflows/: ci.yml  corpus.yml  release.yml
benchmarks/: corpus-baseline.json  corpus-report.json  corpus_scan.py  differential_check.py  python-rust-sweep.json  python_rust_speedup.py  python_rust_sweep.py  rung3-ablation-camera-tracking.json  rung3-results-camera-tracking.json  rung3-uncovered-camera-tracking-differential.json  rung3-uncovered-camera-tracking.json  rung3_rewrite.py  rung4-linkback-pointers-report.json  rung4-linkback-report.json  rung4-nonleaf-sqlite.json  rung4-program-gate.json  rung4-results-sqlite-pointers.json  rung4-results-sqlite-probed.json  rung4-results-sqlite.json  rung4_c_to_rust.py  rung4_linkback.py  rung4_nonleaf_battery.py  rung4_program_gate.py
benchmarks/rung4-artifacts/: sqlite_rust_functions.rs
docs/: README.md  agents.md  architecture-rules.md  architecture.md  corpus-report.md  design-ffi-pipeline.md  development.md  experiment-log.md  feature-research.md  gate-noise.md  github-action.md  languages.md  lsp.md  plan-0.2-0.4.md  plan-0.3.md  python-rust-surface.md  roadmap.md  status.md  strategy.md  vision-rewrite.md  writing-an-adapter.md
examples/: agent-pr-contract-drift.md
examples/c-adapter/: NOTES.md  README.md
examples/rust-adapter/: NOTES.md  README.md  rust_adapter.py  test_rust_adapter.py
schemas/: component_spec.schema.json
src/cgir/: __init__.py  cli.py  config.py  hooks.py  manifest.py  pipeline.py  replay.py  rewrite.py  rewrite_c_rust.py  rewrite_python_rust.py  verify.py  watch.py
src/cgir/analyses/: __init__.py  _python_ast.py  call_graph.py  cfg.py  coverage_link.py  decompose.py  effects.py  entrypoints.py  param_flow.py  pdg.py  purity.py  reaching_defs.py  symbols.py
src/cgir/api/: __init__.py  lsp_server.py  mcp_server.py  server.py
src/cgir/export/: __init__.py  graphml.py  html_viz.py  json_export.py  mermaid.py  neo4j.py
src/cgir/ffi/: __init__.py  driver.py  gate.py  ir.py  replay_ffi.py
src/cgir/ffi/sources/: __init__.py  c.py  python.py
src/cgir/ffi/targets/: __init__.py  pyo3.py  rust.py
src/cgir/ir/: __init__.py  component_spec.py  edges.py  graph.py  nodes.py
src/cgir/languages/: __init__.py  base.py  c.py  cache.py  go.py  python.py  registry.py  rust.py  typescript.py
src/cgir/regenerate/: __init__.py  prompt_pack.py  regenerator.py
src/cgir/report/: __init__.py  diff.py  flow.py  impact.py  lint.py  pack.py  pins.py  search.py  stats.py
src/cgir/slicing/: __init__.py  slicer.py
src/cgir/sources/: __init__.py  base.py  codeql_source.py  joern_source.py  tree_sitter_source.py
src/cgir/trace/: __init__.py  trace_map.py
tests/: conftest.py
tests/fixtures/c_error_recovery/: vorbis_prefix.c
tests/fixtures/python_rust_sample/: mathlib.py  test_mathlib.py
tests/fixtures/python_sample/: orchestrator.py  pricing.py
tests/fixtures/ts_sample/: util.ts
tests/fixtures/ts_sample/api/: service.ts
tests/integration/: test_api.py  test_cli_scan.py  test_hook.py  test_init.py
tests/unit/: test_action.py  test_c_adapter.py  test_call_graph.py  test_cfg.py  test_component_spec.py  test_confidence.py  test_corpus_gate.py  test_coverage_link.py  test_decompose.py  test_diff.py  test_effects.py  test_entrypoints.py  test_ffi_layout.py  test_go_adapter.py  test_graphml.py  test_html_viz.py  test_impact.py  test_impact_run.py  test_incremental_verify.py  test_ir_graph.py  test_language_adapter.py  test_lint.py  test_lsp.py  test_manifest.py  test_mcp_tools.py  test_mermaid.py  test_pack.py  test_param_flow.py  test_pdg.py  test_pins.py  test_plugin_registry.py  test_purity.py  test_python_ast.py  test_python_di.py  test_python_rust.py  test_raise_confidence.py  test_reaching_defs.py  test_regenerator.py  test_replay.py  test_replay_ffi.py  (+14 more)
