[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
# Distribution name (the import package and CLI command are both `cgir`;
# the PyPI project name `cgir` was already taken, so we ship as codegraph-ir).
name = "codegraph-ir"
version = "0.4.0"
description = "The deterministic contract layer for AI-modified codebases — effects, purity, contracts, and blast radius, with zero LLM calls."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "Aryaman Sonkiya" }]
keywords = [
  "static-analysis",
  "code-graph",
  "contracts",
  "effects",
  "purity",
  "ai-agents",
  "llm",
  "code-review",
  "tree-sitter",
  "mcp",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = [
  "typer>=0.12",
  "pydantic>=2.6",
  "networkx>=3.2",
  "tree-sitter>=0.23,<0.25",
  "tree-sitter-python>=0.23,<0.24",
  "tree-sitter-typescript>=0.23,<0.24",
  "tree-sitter-go>=0.23,<0.25",
  # <0.24: 0.24.x ships language ABI 15, incompatible with tree-sitter 0.24
  "tree-sitter-rust>=0.23,<0.24",
  "jsonschema>=4.21",
]

[project.optional-dependencies]
api = ["fastapi>=0.110", "uvicorn>=0.27"]
llm = ["anthropic>=0.40"]
mcp = ["mcp>=1.2"]
lsp = ["pygls>=1.3"]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "mypy>=1.10",
  "types-jsonschema",
  "httpx>=0.27",
  "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/asonkiya/llm-semantic-compilers"
Repository = "https://github.com/asonkiya/llm-semantic-compilers"
Issues = "https://github.com/asonkiya/llm-semantic-compilers/issues"

[project.scripts]
cgir = "cgir.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/cgir"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["cgir"]
mypy_path = "src"
warn_unused_ignores = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = ["tree_sitter.*", "tree_sitter_python.*", "networkx.*", "anthropic.*", "mcp.*", "pygls.*", "lsprotocol.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# FastMCP/pygls are lazily imported (optional extras), so their decorators are
# Any — and the pygls 1.x-fallback ignore is only "used" when pygls is
# installed, so unused-ignore warnings are off for these modules.
module = ["cgir.api.mcp_server", "cgir.api.lsp_server"]
disallow_untyped_decorators = false
warn_unused_ignores = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
